--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                 <li>Physical Education Health III</li>
             </ul>
             <ul>For my 2025-2026 year (Senior), I anticipate taking:
-                <li>Calc III Dual Enrollment</li>
+                <li>Calculus III Dual Enrollment</li>
                 <li>AP Physics</li>
                 <li>AP Computer Science A</li>
                 <li>AP Economics</li>
@@ -133,7 +133,33 @@
             </ul>
         </h2>
 
-        <h2 id="odyssey_of_the_mind">Being a member of Odyssey of the Mind is really fun! Odyssey of the Mind targets to help kids 
+
+        <h2 id="experience">Experience:<br> <br>
+                    <br>
+                <span id = "google_code_next">
+                    - I have finished a coding program with Google called Google Code Next. Here I learned Python, Javascript, HTML, CSS, learned the p5.js library, and EarSketch to make music with code.
+                    <br>
+                    <img src="images/Carlos Sorto_connect2024.jpg" width = "350" height="auto">
+                </span>
+                <br>
+                <br>
+                <span id="om_ticket_machine">
+                    - For Odyssey of the Mind, I have built a ticket machine for a small RC car using an Arduino board, motors, and a light sensor. Coding using Arduino's version of C++ was a challenge for me, but I eventually got it working after months of work and YouTube videos.
+                    <br>
+                    <br>
+                    Here is an early protoype and the finalized code of the ticket machine:
+                    <br>
+                    <br>
+                    <img src="images/ticketmachineactual.png" height = "500px" width = "auto">
+                    <img src="images/ticketcode.png" height = "500px" width = "auto">
+                </span>
+
+        </h2>
+
+        <h2 id="odyssey_of_the_mind">Odyssey of the Mind
+            <br>
+            <br>
+            Being a member of Odyssey of the Mind is really fun! Odyssey of the Mind targets to help kids 
             build their problem solving skills, engineering skills, and presentational skills.
             <p>Through my school, teammates, and tons of hours put into work, my team and I were able to go to Iowa State University to go compete globally with people from many countries. After getting 1st place in the NJ regional competition, and then 2nd place in the NJ state competition, we were able to move on to the global competition!
                 My team specializes in vehicle engineering, so we competed for the Drive-In Movie Theatre challenge. </p>
